--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^11.10.1",
     "google-auth-library": "^9.0.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0"
   },
